# agentbuilder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: index.md  installation.md
docs/guides/: agents.md  context-engineering.md  guardrails-and-hitl.md  llm-clients.md  memory.md  observability.md  prompts.md  quickstart.md  retrieval-and-rag.md  scope-and-async.md  skills.md  structured-output.md  testing.md  tools.md
docs/reference/: agents.md  config.md  context.md  core.md  memory.md  prompts.md  rag.md  retrieval.md  runtime.md  skills.md  testing.md  tools.md
docs/zh/: index.md  installation.md  reference.md
docs/zh/guides/: agents.md  context-engineering.md  guardrails-and-hitl.md  llm-clients.md  memory.md  observability.md  prompts.md  quickstart.md  retrieval-and-rag.md  scope-and-async.md  skills.md  structured-output.md  testing.md  tools.md
examples/: 01_quickstart.py  02_tools_and_registry.py  03_structured_output.py  04_memory.py  05_rag.py  06_workflows.py  07_guardrails_and_hitl.py  08_prompt_packs.py  09_async.py  10_scope_isolation.py  11_multi_agent.py  12_sessions.py  13_observability.py  14_run_policy.py  15_declarative_spec.py  16_skills.py
scripts/: check_imports.py
src/agentbuilder/: __init__.py  config.py  testing.py
src/agentbuilder/agents/: __init__.py  agent.py  base.py  result.py  spec.py
src/agentbuilder/context/: __init__.py  builder.py  history_compactor.py  mmr.py  reducer.py  sources.py  types.py  window_budget.py
src/agentbuilder/core/: __init__.py  aio.py  clock.py  exceptions.py  llm_clients.py  llm_response.py  message.py  multimodal.py  text.py  trace_events.py
src/agentbuilder/devtools/: __init__.py  __main__.py  diagnose.py  doctor.py  trace_parser.py  webapp.py
src/agentbuilder/memory/: __init__.py  kv.py  memory.py  memory_tool.py  smart_writer.py  store.py  types.py
src/agentbuilder/prompts/: __init__.py  __main__.py  defaults.py  registry.py
src/agentbuilder/rag/: __init__.py  ingest.py  (+7 more)
tests/: conftest.py  test_abc_improvements.py  test_agents.py  test_aio.py  test_async_seams.py  test_config.py  test_context.py  test_core.py  test_devtools.py  test_from_config.py  test_memory.py  test_message.py  test_multimodal.py  test_observability.py  test_profiles.py  test_prompts.py  test_public_api.py  test_rag.py  test_retrieval.py  test_run_policy.py  test_runtime.py  test_security.py  test_skills.py  test_storage_schema.py  test_streaming_tool_loop.py  test_testing.py  test_tool_decorator.py  test_tool_emulation.py
(+73 files in other folders)
