[project]
name = "agentbuilder"
dynamic = ["version"]
description = "A general-purpose Python framework for building LLM agents and multi-agent systems, with tools, memory, retrieval / RAG, context engineering, guardrails, human-in-the-loop, and observability."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xinhuang" }]
keywords = ["agent", "llm", "framework", "rag", "memory", "tools", "function-calling", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Core batteries, installed by default (LLM calls, structured output, local retrieval, tool-arg validation).
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "sqlite-vec>=0.1.9",
    "jieba>=0.42.1",
    "pyyaml>=6.0",
]

# Optional extras, each imported lazily: pip install "agentbuilder[anthropic]" / [rag] / [all] ...
[project.optional-dependencies]
anthropic = ["anthropic>=0.105.2"]
gemini = ["google-genai>=2.7.0"]
rerank = ["cohere>=7.0.2"]
mcp = ["mcp>=1.27.2"]
search = ["ddgs>=9.0.0", "tavily-python>=0.7.24", "requests>=2.34.2", "serpapi>=1.0.2"]
rag = ["markitdown>=0.1.6"]
otel = ["opentelemetry-api>=1.42.1", "opentelemetry-sdk>=1.42.1"]
devtools = ["fastapi>=0.136", "uvicorn[standard]>=0.30"]
all = ["agentbuilder[anthropic,gemini,rerank,mcp,search,rag,otel,devtools]"]

[project.urls]
Homepage = "https://xinhuangcs.github.io/agentbuilder/"
Documentation = "https://xinhuangcs.github.io/agentbuilder/"
Repository = "https://github.com/xinhuangcs/agentbuilder"
Changelog = "https://github.com/xinhuangcs/agentbuilder/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/agentbuilder/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbuilder"]
exclude = ["**/README_zh.md"]

[tool.hatch.build.targets.sdist]
only-include = ["src/agentbuilder", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]
exclude = ["**/README_zh.md"]

[dependency-groups]
dev = ["pytest>=9.0.3", "python-dotenv>=1.2.2"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.27"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
